# foras

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic.rs  group_theory_commutator.rs  pigeonhole_principle.rs  propositional_logic_answer.rs  robbins_algebra.rs  zebra_puzzle.rs
src/: lib.rs  main.rs
src/config/: params.rs
src/data/: attribute.rs  clause.rs  ordering.rs  parent.rs  weight.rs
src/inference/: builder.rs  demod.rs  factor.rs  hints.rs  hyper.rs  linked_ur.rs  lrpo.rs  mod.rs  output.rs  para.rs  prover.rs  resolution.rs  subsume.rs  unify.rs  unit_del.rs  ur.rs
src/parser/: formula.rs  mod.rs  operator.rs  syntax.rs
src/regression/: executor.rs  mod.rs
tests/: smoke_tests.rs  test.rs
