[package]
name = "foras"
version = "0.0.5"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "First-Order Reasoner"
documentation = "https://docs.rs/foras"
homepage = "https://github.com/cryptopatrick/foras"
repository = "https://github.com/cryptopatrick/foras"
readme = "README.md"
keywords = ["ai", "reasoner", "inference"]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "foras"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
scryer-prolog = "0.10.0"